--- a/application/views/scripts/certifications/index.phtml
+++ b/application/views/scripts/certifications/index.phtml
@@ -1,9 +1,18 @@
 <table id="tableau_certifications">
 </table>
 <div id="add_form" style="display : none">
-    <?php
-        echo $this->add_form;
-    ?>
+	<div id="label_certification">
+		<label for="nom" class="optional">Nom :</label>
+		<label for="type" class="optional">Type :</label>
+		<label for="nombre_question" class="optional">Nombre de question :</label>
+		<label for="temps_certification" class="optional">Temps certification (mn) :</label>
+	</div> <!-- label_certification -->
+	<div id="input_certification">
+		<input type="text" name="nom" id="nom" value="" />
+		<input type="text" name="type" id="type" value="" />
+		<input type="text" name="nombre_question" id="nombre_question" value="" />
+		<input type="text" name="temps_certification" id="temps_certification" value="" />
+	</div> <!-- input_certification -->
 </div>
 <div id="delete_dialog" style="display : none">
     <p>Etes vous sur de vouloir supprimer cette certification ? </p>
@@ -35,7 +44,7 @@
                     {separator: true},
                     {name: 'Supprimer', bclass: 'delete', onpress : delete_record},
                     {separator : true},
-                    {name: 'Detail', bclass: 'detail', onpress : detail_record}
+                    {name: 'Détails', bclass: 'detail', onpress : detail_record}
             ],
             searchitems : [
                     {display: 'Nom', name : 'nom', isdefault: true},
@@ -63,8 +72,17 @@
                     $( "#error" ).fadeOut("slow");
                 }, 2000 );
             }
+			
+			// On vide les champs par sécurité            
+            $("#nom").val('');
+            $("#type").val('');
+            $("#nombre_question").val('');
+            $("#temps_certification").val('');
+
+            
             $("#add_form").dialog({
                 title : "Ajouter une certification",
+                width : 560,
                 buttons : [
                     {
                         text : "Valider",
@@ -109,10 +127,10 @@
             var record_count = $('.trSelected',grid).length;
             if (0 == record_count)
             {
-                $("#info").html('&nbsp;Veuillez dabord sélectionner une ligne !');
-                $("#info").show();
+                $("#error").html('&nbsp;Veuillez dabord sélectionner une ligne !');
+                $("#error").show();
                 setTimeout(function() {
-                     $("#info").fadeOut("slow");
+                     $("#error").fadeOut("slow");
                 }, 2000 );
                 return;
             }
@@ -121,14 +139,15 @@
             $('.trSelected',grid).each(function(){
                 id = this.id.substr(3);
                                   
-                $("#nom_edit").val($('td[abbr="nom"] >div', this).html());
-                $("#type_edit").val($('td[abbr="type"] >div', this).html());
-                $("#nombre_question_edit").val($('td[abbr="nombre_question"] >div', this).html());
-                $("#temps_certification_edit").val($('td[abbr="temps_certification"] >div', this).html());
+                $("#nom").val($('td[abbr="nom"] >div', this).html());
+                $("#type").val($('td[abbr="type"] >div', this).html());
+                $("#nombre_question").val($('td[abbr="nombre_question"] >div', this).html());
+                $("#temps_certification").val($('td[abbr="temps_certification"] >div', this).html());
             });
             
-            $("#edit_form").dialog({
+            $("#add_form").dialog({
                 title : "Modifier une certification",
+                width : 560,
                 buttons : [
                     {
                         text : "Valider",
