--- a/application/views/scripts/formation/listeformationdispo.phtml
+++ b/application/views/scripts/formation/listeformationdispo.phtml
@@ -1,12 +1,6 @@
-<div id="content">
-	<div class="indent-main">
-		<div class="container">
-			<h2>Formations disponibles</h2>
-						<br /><br />
-			<h5>Veuillez choisir une formations dans la liste ci-dessous pour passer une commande.</h5>
-			<?php
-				echo $this->liste;
-			?>
-		</div>
-	</div>
-</div>	
+<h1>Formations disponibles</h1>
+			<br /><br />
+<h5 class="h5_modifie">Veuillez choisir une formations dans la liste ci-dessous pour passer une commande.</h5>
+<?php
+	echo $this->liste;
+?>
