--- a/application/views/scripts/groupe/index.phtml
+++ b/application/views/scripts/groupe/index.phtml
@@ -71,7 +71,8 @@
             height: 500,
             singleSelect: true
         });
-        $(".ftitle").append('<span id="info" style="color : red">&nbsp;</span>');
+        $(".ftitle").append('<span id="info" style="color : green">&nbsp;</span>');
+        $(".ftitle").append('<span id="error" style="color : red">&nbsp;</span>');
         
         // Détail
         function detail(command, grid){
@@ -79,10 +80,10 @@
             var record_count = $('.trSelected',grid).length;
             if (0 == record_count)
             {
-                $("#info").html('Veuillez dabord sélectionner une ligne !');
-                $("#info").show();
+                $("#error").html('Veuillez dabord sélectionner une ligne !');
+                $("#error").show();
                 setTimeout(function() {
-                    $("#info").fadeOut("slow");
+                    $("#error").fadeOut("slow");
                 }, 2000 );
                 return;
              }
@@ -103,10 +104,10 @@
         function add_record(command, grid){
             // On vérifie si l'utilisateur à le droit
             if($("#ajouter_groupe").val() != 'true'){
-                 $("#info").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
-                 $("#info").show();
+                 $("#error").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
+                 $("#error").show();
                  setTimeout(function() {
-                     $( "#info" ).fadeOut("slow");
+                     $( "#error" ).fadeOut("slow");
                      }, 2000 );
                 return false;
             }
@@ -147,18 +148,18 @@
         function add_user(command, grid){
             // On vérifie si l'utilisateur à le droit
             if($("#ajouter_utilisateur_groupe").val() != 'true'){
-                 $("#info").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
-                 $("#info").show();
+                 $("#error").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
+                 $("#error").show();
                  setTimeout(function() {
-                     $( "#info" ).fadeOut("slow");
+                     $( "#error" ).fadeOut("slow");
                      }, 2000 );
                 return false;
             }
             var record_count = $('.trSelected',grid).length;
             if (0 == record_count)
             {
-                $("#info").html('Veuillez dabord sélectionner une ligne !');
-                $("#info").show();
+                $("#error").html('Veuillez dabord sélectionner une ligne !');
+                $("#error").show();
                 setTimeout(function() {
                     $("#info").fadeOut("slow");
                 }, 2000 );
@@ -183,7 +184,7 @@
              
             $("#ajout_utilisateur_groupe").dialog({
                 title : 'Ajouter un utilisateur à un groupe',
-                width : 450,
+                width : 460,
                 height : 300,
                 buttons : [
                     {
@@ -220,20 +221,20 @@
         {            
             // On vérifie si l'utilisateur à le droit
             if($("#supprimer_groupe").val() != 'true'){
-                 $("#info").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
-                 $("#info").show();
+                 $("#error").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
+                 $("#error").show();
                  setTimeout(function() {
-                     $( "#info" ).fadeOut("slow");
+                     $( "#error" ).fadeOut("slow");
                      }, 2000 );
                 return false;
             }
             var record_count = $('.trSelected',grid).length;
             if (0 == record_count)
             {
-                $("#info").html('Veuillez dabord sélectionner une ligne !');
-                $("#info").show();
+                $("#error").html('Veuillez dabord sélectionner une ligne !');
+                $("#error").show();
                 setTimeout(function() {
-                    $("#info").fadeOut("slow");
+                    $("#error").fadeOut("slow");
                 }, 2000 );
                 return;
              }         
@@ -278,10 +279,10 @@
          {
              // On vérifie si l'utilisateur à le droit
              if($("#editer_groupe").val() != 'true'){
-                $("#info").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
-                $("#info").show();
+                $("#error").html('&nbsp;Vous n\'avez pas l\'autorisation d\'effectuer cette action !');
+                $("#error").show();
                 setTimeout(function() {
-                    $("#info").fadeOut("slow");
+                    $("#error").fadeOut("slow");
                 }, 2000 );     
                 return false;
             }
@@ -289,10 +290,10 @@
              var record_count = $('.trSelected',grid).length;
              if (0 == record_count)
              {
-                 $("#info").html('&nbsp;Veuillez dabord sélectionner une ligne !');
-                 $("#info").show();
+                 $("#error").html('&nbsp;Veuillez dabord sélectionner une ligne !');
+                 $("#error").show();
                  setTimeout(function() {
-                     $("#info").fadeOut("slow");
+                     $("#error").fadeOut("slow");
                  }, 2000 );
                  return;
              }
