--- a/application/views/scripts/document/upload.phtml
+++ b/application/views/scripts/document/upload.phtml
@@ -1,8 +1,3 @@
-<div id="content">
-	<h2>Envoyer un document : 
-	<?php
-        $this->form->setAction($this->url());
-		echo $this->type."</h2>";
-		echo $this->form;
-	?>	
-</div>
+<script type="text/javascript">
+	window.top.window.formUploadCallback(<?php echo $this->result; ?>, '<?php echo $this->type ?>');
+</script>
