--- a/application/views/scripts/questions/index.phtml
+++ b/application/views/scripts/questions/index.phtml
@@ -23,7 +23,7 @@
             url : '/Questions/getlistequestion',
             dataType: 'json',
             colModel : [
-                    {display: 'Question', name : 'question', width : 150, sortable : true, align: 'left'},
+                    {display: 'Questions', name : 'question', width : 150, sortable : true, align: 'left'},
                     {display: 'Nombre de réponse', name:'nbr_reponse', width:150, sortable:true, align :'lef'}
             ],
            buttons : [
