--- a/application/views/scripts/groupe/detailgroupe.phtml
+++ b/application/views/scripts/groupe/detailgroupe.phtml
@@ -1,13 +1,14 @@
-
-    <div id="utilisateurs">
-    <table id="tableau_utilisateurs">
-    </table>
-    </div>
-    <div id="autorisations">
-    <table id="tableau_autorisations">
-    </table>
-    </div>
-
+<?php
+	echo $this->placeholder('menu-connecte');
+?>
+<div id="utilisateurs">
+<table id="tableau_utilisateurs">
+</table>
+</div>
+<div id="autorisations">
+<table id="tableau_autorisations">
+</table>
+</div>
 <div id="delete_modal" style="display : none;">
     Etes vous sur de vouloir retirer l'utilisateur de ce groupe ? 
 </div>
