--- a/application/views/scripts/certifications/detailcertification.phtml
+++ b/application/views/scripts/certifications/detailcertification.phtml
@@ -1,3 +1,6 @@
+<?php
+	echo $this->placeholder('menu-connecte');
+?>
 <table id="tableau_question">
 </table>
 <div id="delete_dialog" style="display:none">
