--- a/application/views/scripts/certifications/index.phtml
+++ b/application/views/scripts/certifications/index.phtml
@@ -1,3 +1,6 @@
+<?php
+	echo $this->placeholder('menu-connecte');
+?>
 <table id="tableau_certifications">
 </table>
 <div id="add_form" style="display : none">
