--- a/application/views/scripts/formation/listeformation.phtml
+++ b/application/views/scripts/formation/listeformation.phtml
@@ -1,3 +1,6 @@
+<?php
+	echo $this->placeholder('menu-connecte');
+?>
 <table id="tableau_formation"></table>
 <div id="delete_dialog" style="display : none">
 	Etes vous sur de vouloir supprimer cette formation ? 
