--- a/application/views/scripts/utilisateurs/formateuravalider.phtml
+++ b/application/views/scripts/utilisateurs/formateuravalider.phtml
@@ -1,7 +1,12 @@
+<?php
+	echo $this->placeholder('menu-connecte');
+?>
 <table id="tableau_formateur">
 
 </table>
-
+<div id="valid_dialog">
+	<p>Etes vous sur de vouloir valider ce formateur ? </p>
+</div>
 <script type="text/javascript">
 	$(document).ready(function(){
 		$("#tableau_formateur").flexigrid({
@@ -17,7 +22,8 @@
                       ],
             buttons : [
                     {name: 'Valider', bclass: 'valider', onpress : valid_record},
-                    {separator: true},                    
+                    {separator: true},  
+					{name: 'Voir les réponses du test', bclass: 'detail', onpress : detail_record},
             ],
             searchitems : [
                     {display: 'Nom', name : 'nom'},
@@ -38,9 +44,106 @@
         $(".ftitle").append('<span id="error" style="color : red"></span>');
         
         function valid_record(command, grid){
-        	$('.trSelected',grid).each(function(){
-                 console.log($('td[abbr=cv] > div',this).html());
+        	// On vérifie que l'utilisateur a séléctionné une ligne     
+        	var record_count = $('.trSelected',grid).length;
+            if (0 == record_count)
+            {
+                $("#error").html('&nbsp;Veuillez dabord sélectionner une ligne !');
+                $("#error").show();
+                setTimeout(function() {
+                    $("#error").fadeOut("slow");
+                }, 2000 );
+                return;
+            }
+
+        	// On vérifie que toutes les formalitées sont bien remplies
+        	var cv;
+        	var rib;
+        	var lettre;
+        	var test;
+        	var id;
+            $('.trSelected',grid).each(function(){
+            	cv = $(this).children(':nth-child(3)').children().html();	
+            	rib = $(this).children(':nth-child(4)').children().html();
+            	lettre = $(this).children(':nth-child(5)').children().html();
+                test = $(this).children(':nth-child(6)').children().html();
+                id = this.id.substr(3);
+            });
+            
+            if((cv || rib || lettre) == '<img class="icone_erreur" src="images/icone_erreur_16.png">' || test == '<img class="icone_erreur" src="images/icone_erreur_16.png">'){
+            	$("#error").html('&nbsp;Ce formateur n\'as pas remplis toutes les formalitées');
+                $("#error").show();
+                setTimeout(function() {
+                    $("#error").fadeOut("slow");
+                }, 2000 );
+                return;
+            }
+            
+            $('#valid_dialog').dialog({
+            	title : "Valider un formateur",
+            	buttons: [
+            		{
+            			text : "Valider",
+            			click : function(){
+            				$.ajax({
+            					type : 'post',
+            					url : '/utilisateurs/valideuserajax',
+            					data : {'id_utilisateur' : id, 'valider_utilisateur' : true},
+            					success : function(){
+        	    					$('#valid_dialog').dialog('close');
+		            				$('#tableau_formateur').flexReload();
+		            				$("#info").html('&nbsp;Ce formateur a été validé');
+					                $("#info").show();
+					                setTimeout(function() {
+					                    $("#info").fadeOut("slow");
+					                }, 2000 );
+					                return;
+            					}
+            				});           			
+            			}
+            		},
+            		{
+            			text : "Annuler",
+            			click : function(){
+            				$(this).dialog('close');
+            			}
+            		}
+            	]
+            });	
+        }
+        
+        function detail_record(command, grid){
+ 			// On vérifie que l'utilisateur a séléctionné une ligne     
+        	var record_count = $('.trSelected',grid).length;
+            if (0 == record_count)
+            {
+                $("#error").html('&nbsp;Veuillez dabord sélectionner une ligne !');
+                $("#error").show();
+                setTimeout(function() {
+                    $("#error").fadeOut("slow");
+                }, 2000 );
+                return;
+            }
+            
+            // Si le formateur n'as pas encore passé le test
+
+            var test;
+            var id;
+            $('.trSelected',grid).each(function(){
+                 test = $(this).children(':nth-child(6)').children().html();
+				id = this.id.substr(3);
              });
+            
+            if(test == '<img class="icone_erreur" src="images/icone_erreur_16.png">'){
+             	$("#error").html('&nbsp;Ce formateur n\'as pas encore passé le test');
+                $("#error").show();
+                setTimeout(function() {
+                    $("#error").fadeOut("slow");
+                }, 2000 );
+                return;	
+             }
+             			
+			location.href="/réponses-test-formateur?id="+id;
         }
 	});
 </script>
