--- a/public/css/style.css
+++ b/public/css/style.css
@@ -909,7 +909,86 @@ body {
 	margin-bottom: 5em;
 }
 
-#menu_onglet{
-	border : none;
+#menu_onglet li{
+	float: left;
+	list-style: none;
+}
+
+#menu-connecte{
+	margin: 0;
+	margin-bottom: 6em;
+	margin-top: -1em;
+	padding: 0;
+	position: relative;
+	z-index: 1;
+}
+
+#menu-connecte li{
+    float: left;
+	list-style: none;
+}
+
+#menu-connecte li a{
+    display: block;
+	background: #0F77A6;
+	padding: 5px 12px;
+	text-decoration: none;
+	border-right: 1px solid white;
+	width: auto;
+	color: #FFFFFF; 
+	white-space: nowrap;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px 4px;    
+	cursor: pointer;
+}
+
+#menu-connecte li a:hover{
+    background: #1A4473
+}
+
+#menu-connecte li ul{
+    margin: 0;
+	padding: 0;
+	position: absolute;
+	visibility: hidden;
+	border-top: 1px solid white;
+}
+
+#menu-connecte li ul li{
+    float: none;
+	display: inline;
+}
+
+#menu-connecte li ul li a{
+    width: auto;
+	background: #0F77A6;
+	-moz-border-radius: 0px;
+	-webkit-border-radius: 0px;
+	border-radius: 0px 0px;
+}
+
+#menu-connecte li ul li a:hover{
+    background: #7F1616
+}
+	
+/* Reponse test motivation */
+.question_motivation{
+	font-style: italic;
+	cursor: pointer;
+	font-size: 14px;
+	margin-bottom: 1em;
+}
+
+.reponse_motivation{
+	margin-left : 1em;
+	font-size: 14px;
+	margin-bottom: 1em;
+	border : 1px solid #AAA;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px 4px;
+	background-color: #F5F5F5;
+	padding : 1em;
 }
 	
